[gd_scene load_steps=6 format=3 uid="uid://dv64myk5lp1nx"]

[ext_resource type="Script" path="res://ludum-dare-53/gameplay/components/cannon.gd" id="1_4gpry"]
[ext_resource type="Texture2D" uid="uid://c7qr2ghc7bk7y" path="res://ludum-dare-53/gameplay/assets/dummy/cannon_barrell.png" id="1_rlx0g"]
[ext_resource type="Texture2D" uid="uid://1ew0upj6an7c" path="res://ludum-dare-53/gameplay/assets/dummy/cannon_body.png" id="2_p1iig"]
[ext_resource type="Texture2D" uid="uid://rn1fx5pmtmid" path="res://ludum-dare-53/gameplay/assets/dummy/strength_bar_container.png" id="4_h6ycv"]
[ext_resource type="Texture2D" uid="uid://j2lgjplcs0mt" path="res://ludum-dare-53/gameplay/assets/dummy/strength_bar_fill.png" id="5_hlndv"]

[node name="Cannon" type="Node2D"]
position = Vector2(222, 377)
script = ExtResource("1_4gpry")
rotation_speed = 25.0
strength_speed = 2.0

[node name="CannonBarrell" type="Sprite2D" parent="."]
position = Vector2(34, 4.31395e-07)
rotation = -0.156741
texture = ExtResource("1_rlx0g")
offset = Vector2(80, 2.08165e-12)

[node name="CannontOutput" type="Node2D" parent="CannonBarrell"]
position = Vector2(206, -15)

[node name="CannonBody" type="Sprite2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
texture = ExtResource("2_p1iig")

[node name="StrengthBar" type="TextureProgressBar" parent="."]
visible = false
offset_left = 83.0
offset_top = -250.0
offset_right = 595.0
offset_bottom = -82.0
scale = Vector2(0.5, 0.5)
max_value = 200.0
value = 1.0
texture_over = ExtResource("4_h6ycv")
texture_progress = ExtResource("5_hlndv")
